--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch",
-    "cypress": "cypress open"
+    "test": "jest --watch --testPathPattern=__tests__",
+    "cypress": "cypress open",
+    "json": "json-server --watch shop-inventory/shop.json"
   },
   "dependencies": {
     "next": "12.0.1",
@@ -26,6 +27,7 @@
     "eslint-config-next": "12.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.3.1",
+    "json-server": "^0.17.0",
     "react-test-renderer": "^17.0.2"
   }
 }
