--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint",
     "test": "jest --watch --testPathPattern=__tests__",
     "cypress": "cypress open",
-    "json": "json-server --watch shop-inventory/shop.json"
+    "json": "json-server --watch -p 3333 shop-inventory/shop.json"
   },
   "dependencies": {
+    "mongodb": "^4.1.4",
     "next": "12.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
