--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cypress": "cypress open"
   },
   "dependencies": {
+    "@svgr/webpack": "^5.5.0",
     "mongodb": "^4.1.4",
     "next": "12.0.1",
     "react": "17.0.2",
