--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@svgr/webpack": "^5.5.0",
+    "framer-motion": "^5.3.1",
     "mongodb": "^4.1.4",
     "next": "12.0.1",
     "react": "17.0.2",
